django_book/nohup.out
[2019-09-12 18:27:05 +0800] [1249] [INFO] Starting gunicorn 19.9.0
[2019-09-12 18:27:05 +0800] [1249] [INFO] Listening at: http://127.0.0.1:8000 (1249)
[2019-09-12 18:27:05 +0800] [1249] [INFO] Using worker: sync
[2019-09-12 18:27:05 +0800] [1284] [INFO] Booting worker with pid: 1284
[2019-09-12 18:27:05 +0800] [1285] [INFO] Booting worker with pid: 1285
[2019-09-12 18:27:06 +0800] [1284] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 583, in spawn_worker
    worker.init_process()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/workers/base.py", line 129, in init_process
    self.load_wsgi()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/workers/base.py", line 138, in load_wsgi
    self.wsgi = self.app.wsgi()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 52, in load
    return self.load_wsgiapp()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 41, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/util.py", line 350, in import_app
    __import__(module)
  File "/root/myWebSite/my_python_book/django_book/django_book/wsgi.py", line 16, in <module>
    application = get_wsgi_application()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/core/wsgi.py", line 13, in get_wsgi_application
    django.setup(set_prefix=False)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/__init__.py", line 27, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/apps/registry.py", line 85, in populate
    app_config = AppConfig.create(entry)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/apps/config.py", line 94, in create
    module = import_module(entry)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/__init__.py", line 4, in <module>
    from django.contrib.admin.filters import (
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/filters.py", line 10, in <module>
    from django.contrib.admin.options import IncorrectLookupParameters
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/options.py", line 13, in <module>
    from django.contrib.admin import helpers, widgets
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/widgets.py", line 152
    '%s=%s' % (k, v) for k, v in params.items(),
    ^
SyntaxError: Generator expression must be parenthesized
[2019-09-12 18:27:06 +0800] [1284] [INFO] Worker exiting (pid: 1284)
[2019-09-12 18:27:06 +0800] [1285] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 583, in spawn_worker
    worker.init_process()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/workers/base.py", line 129, in init_process
    self.load_wsgi()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/workers/base.py", line 138, in load_wsgi
    self.wsgi = self.app.wsgi()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 52, in load
    return self.load_wsgiapp()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 41, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/util.py", line 350, in import_app
    __import__(module)
  File "/root/myWebSite/my_python_book/django_book/django_book/wsgi.py", line 16, in <module>
    application = get_wsgi_application()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/core/wsgi.py", line 13, in get_wsgi_application
    django.setup(set_prefix=False)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/__init__.py", line 27, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/apps/registry.py", line 85, in populate
    app_config = AppConfig.create(entry)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/apps/config.py", line 94, in create
    module = import_module(entry)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/__init__.py", line 4, in <module>
    from django.contrib.admin.filters import (
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/filters.py", line 10, in <module>
    from django.contrib.admin.options import IncorrectLookupParameters
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/options.py", line 13, in <module>
    from django.contrib.admin import helpers, widgets
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/django/contrib/admin/widgets.py", line 152
    '%s=%s' % (k, v) for k, v in params.items(),
    ^
SyntaxError: Generator expression must be parenthesized
[2019-09-12 18:27:06 +0800] [1285] [INFO] Worker exiting (pid: 1285)
Traceback (most recent call last):
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 210, in run
    self.sleep()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 360, in sleep
    ready = select.select([self.PIPE[0]], [], [], 1.0)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 245, in handle_chld
    self.reap_workers()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 525, in reap_workers
    raise HaltServer(reason, self.WORKER_BOOT_ERROR)
gunicorn.errors.HaltServer: <HaltServer 'Worker failed to boot.' 3>

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/root/.pyenv/versions/3.7.0/bin/gunicorn", line 10, in <module>
    sys.exit(run())
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 61, in run
    WSGIApplication("%(prog)s [OPTIONS] [APP_MODULE]").run()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/base.py", line 223, in run
    super(Application, self).run()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/app/base.py", line 72, in run
    Arbiter(self).run()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 232, in run
    self.halt(reason=inst.reason, exit_status=inst.exit_status)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 345, in halt
    self.stop()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 393, in stop
    time.sleep(0.1)
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 245, in handle_chld
    self.reap_workers()
  File "/root/.pyenv/versions/3.7.0/lib/python3.7/site-packages/gunicorn/arbiter.py", line 525, in reap_workers
    raise HaltServer(reason, self.WORKER_BOOT_ERROR)
gunicorn.errors.HaltServer: <HaltServer 'Worker failed to boot.' 3>
[2019-09-12 19:03:13 +0800] [11673] [INFO] Starting gunicorn 19.9.0
[2019-09-12 19:03:13 +0800] [11673] [INFO] Listening at: http://127.0.0.1:8000 (11673)
[2019-09-12 19:03:13 +0800] [11673] [INFO] Using worker: sync
[2019-09-12 19:03:13 +0800] [11676] [INFO] Booting worker with pid: 11676
[2019-09-12 19:03:13 +0800] [11677] [INFO] Booting worker with pid: 11677
[2019-09-12 21:01:38 +0800] [15556] [INFO] Starting gunicorn 19.9.0
[2019-09-12 21:01:38 +0800] [15556] [INFO] Listening at: http://127.0.0.1:8000 (15556)
[2019-09-12 21:01:38 +0800] [15556] [INFO] Using worker: sync
[2019-09-12 21:01:38 +0800] [15559] [INFO] Booting worker with pid: 15559
[2019-09-12 21:01:38 +0800] [15560] [INFO] Booting worker with pid: 15560
